--- a/literacy/index.html
+++ b/literacy/index.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Циклы статей о финансовой грамотности" />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-12-01" />
-        <meta property="og:article:modified_time" content="2020-01-15" />
+        <meta property="og:article:modified_time" content="2020-02-10" />
 <meta property="og:title" content="Грамотность" />
 <meta property="og:url" content="https://onfin.github.io/literacy" />
 
@@ -67,6 +67,7 @@
 <li><a href="/literacy/notaboutmoney">Бережливость — это не про деньги</a></li>
 <li><a href="/literacy/reserves">Формирование резервов</a></li>
 <li><a href="/literacy/stocks">Акции и их смысл</a></li>
+<li><a href="/literacy/returns">Анатомия доходности</a></li>
 </ol>
 <h2 id="_2">Практика</h2>
 <ol>
