--- a/literacy/stocks.html
+++ b/literacy/stocks.html
@@ -115,7 +115,7 @@
     <div class="pure-g">
     <div class="pure-u-1-3 left"><a href="/literacy/reserves"> &lt;&lt; Формирование резервов </a></div>
     <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
-    <div class="pure-u-1-3 right"><a href="/literacy/howto"> Пенсия своими силами. Пошаговое руководство &gt;&gt; </a></div>
+    <div class="pure-u-1-3 right"><a href="/literacy/returns"> Анатомия доходности &gt;&gt; </a></div>
     </div>
 </div>
 </div>
