--- a/calculators/index.html
+++ b/calculators/index.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="На странице собраны ссылки на различные мои финансовые калькуляторы." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-10-13" />
-        <meta property="og:article:modified_time" content="2020-01-10" />
+        <meta property="og:article:modified_time" content="2020-02-10" />
 <meta property="og:title" content="Калькуляторы" />
 <meta property="og:url" content="https://onfin.github.io/calculators" />
 
@@ -85,6 +85,7 @@
 </ul>
 </li>
 <li><a href="/calculators/fees_taxes_effect">Влияние комиссий и налогов на финансовый результат</a></li>
+<li><a href="/calculators/bond_price">Стоимость облигаций</a></li>
 </ol>
         </div>
         <aside>
