--- a/literacy/brokers.html
+++ b/literacy/brokers.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="На что смотреть и на что не смотреть при выборе брокера. Основные виды комиссий брокеров. Сравнение комиссий  брокеров." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-12-16" />
-        <meta property="og:article:modified_time" content="2020-02-10" />
+        <meta property="og:article:modified_time" content="2020-08-07" />
 <meta property="og:title" content="Как выбрать брокера" />
 <meta property="og:url" content="https://onfin.github.io/literacy/brokers" />
 
@@ -54,7 +54,7 @@
         <h1>Как выбрать брокера</h1>
         <div class="meta">
                 <p class="description">На что смотреть и на что не смотреть при выборе брокера. Основные виды комиссий брокеров. Сравнение комиссий  брокеров.</p>
-                <p> Обновлено: <time>2020-02-10</time> </p>
+                <p> Обновлено: <time>2020-08-07</time> </p>
 
         </div>
     </header>
@@ -567,7 +567,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/literacy/credits"> &lt;&lt; Математика кредитов </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/moneytransfer"> Денежные переводы &gt;&gt; </a></div>
+<div class="prevupnext"><a class="prev" href="/literacy/credits"> &lt;&lt; Математика кредитов </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/yield"> Как считать доходность &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
