--- a/literacy/index.html
+++ b/literacy/index.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Циклы статей о финансовой грамотности" />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-12-01" />
-        <meta property="og:article:modified_time" content="2020-07-31" />
+        <meta property="og:article:modified_time" content="2020-08-07" />
 <meta property="og:title" content="Грамотность" />
 <meta property="og:url" content="https://onfin.github.io/literacy" />
 
@@ -72,6 +72,7 @@
 <li><a href="/literacy/cardscalc">Использование и расчёт банковских карт</a></li>
 <li><a href="/literacy/credits">Математика кредитов</a></li>
 <li><a href="/literacy/brokers">Как выбрать брокера</a></li>
+<li><a href="/literacy/yield">Как считать доходность</a></li>
 </ol>
 <h2 id="_3">Справочник</h2>
 <ol>
