--- a/literacy/moneytransfer.html
+++ b/literacy/moneytransfer.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Как правильно переводить деньги. Какие здесь есть возможности, риски и подводные камни. Как избежать обвинений в обналичке, транзите и отмывании." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-12-09" />
-        <meta property="og:article:modified_time" content="2020-01-15" />
+        <meta property="og:article:modified_time" content="2020-08-07" />
 <meta property="og:title" content="Денежные переводы" />
 <meta property="og:url" content="https://onfin.github.io/literacy/moneytransfer" />
 
@@ -54,7 +54,7 @@
         <h1>Денежные переводы</h1>
         <div class="meta">
                 <p class="description">Как правильно переводить деньги. Какие здесь есть возможности, риски и подводные камни. Как избежать обвинений в обналичке, транзите и отмывании.</p>
-                <p> Обновлено: <time>2020-01-15</time> </p>
+                <p> Обновлено: <time>2020-08-07</time> </p>
 
         </div>
     </header>
@@ -184,7 +184,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/literacy/brokers"> &lt;&lt; Как выбрать брокера </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/deposits"> Размещение средств в банках &gt;&gt; </a></div>
+<div class="prevupnext"><a class="prev" href="/literacy/yield"> &lt;&lt; Как считать доходность </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/deposits"> Размещение средств в банках &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
