--- a/notes/inflation.html
+++ b/notes/inflation.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Что такое инфляция, её составляющие, как она измеряется, и почему это всё неправильно" />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-02-01" />
-        <meta property="og:article:modified_time" content="2020-05-16" />
+        <meta property="og:article:modified_time" content="2020-08-19" />
 <meta property="og:title" content="Инфляция" />
 <meta property="og:url" content="https://onfin.github.io/notes/inflation" />
 
@@ -54,7 +54,7 @@
         <h1>Инфляция</h1>
         <div class="meta">
                 <p class="description">Что такое инфляция, её составляющие, как она измеряется, и почему это всё неправильно</p>
-                <p> Обновлено: <time>2020-05-16</time> </p>
+                <p> Обновлено: <time>2020-08-19</time> </p>
 
         </div>
     </header>
@@ -107,7 +107,7 @@
 <p>Другая проблема — всё это монетарные операции и они действуют на монетарную составляющую инфляции, связанную с «наполнением» экономики деньгами. Инфляция немонетарная, вызванная часто неумелыми (а иногда и просто уголовными) вмешательствами властей в экономику, им неподвластна. Если власть своими действиями выводит большое количество бизнесов за границу рентабельности, то попытка бороться с возникающим ростом цен изъятием денег из экономики усугубит ситуацию в долгосрочной перспективе (издержки станут выше, и ещё больше предприятий станет нерентабельными), а печать новых денег (с целью снизить издержки и вернуть часть этих предприятий обратно в «зелёную зону») — устроит инфляционный шок (одновременный рост спроса и падение предложения) прямо на месте, с непредсказуемыми последствиями.</p>
 <p>Третья проблема, как я уже писал выше, — от структурной «инфляции», которая вовсе не инфляция, но может восприниматься как таковая ЦБ, из-за несовершенства средств измерения. Неверно интерпретировав сигнал от ИПЦ, центробанк может начать предпринимать действия, прямо ухудшающие работу экономики. К счастью, центробанки как правило осторожны и пристально следят за последствиями своих решений, поэтому неверная политика скорее всего будет быстро отменена. Хотя относительно европейского центробанка у меня в этом отношении есть некоторые сомнения, но ему приходится единой политикой регулировать чудовищно различные по своему состоянию экономики (за цену <a href="https://www.numbeo.com/cost-of-living/in/Podgorica">обеда в Черногории</a> во Франции <a href="https://www.numbeo.com/cost-of-living/in/Paris">едва чашку кофе нальют</a>), так что ему там всё равно должно быть виднее.</p>
 <p>Разделить все эти эффекты — практически невозможно, и ошибки (иногда фатальные) — неизбежны.</p>
-<p>Поэтому моя надежда на криптовалюты — в том, что абсолютная прозрачность транзакций и алгоритмизация эмиссии позволит построить точный автоматический регулятор наполнения деньгами различных секторов экономики, сделать экономический рост идеально ровным, а распределение богатства — рыночно-справедливым. К сожалению, криптовалютное сообщество настолько дремуче в экономическом плане, что упорно строит валюты по подобию золота, хотя катастрофические последствия отката на такую систему денежного обращения — вполне очевидны.</p>
+<p>Поэтому моя надежда на криптовалюты — в том, что абсолютная прозрачность транзакций и алгоритмизация эмиссии позволит построить точный автоматический регулятор наполнения деньгами различных секторов экономики, сделать экономический рост идеально ровным, а распределение богатства — рыночно-справедливым. К сожалению, криптовалютное сообщество настолько дремуче в экономическом плане, что упорно строит валюты по подобию золота, хотя катастрофические последствия отката на такую систему денежного обращения — вполне очевидны. <a href="/literacy/instruments/crypto">И вообще там всё плохо.</a></p>
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
@@ -126,7 +126,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/notes/volatility"> &lt;&lt; Волатильность как мера риска </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/bonds_in_portfolio"> Облигации в инвестиционном портфеле &gt;&gt; </a></div>
+
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
