--- a/notes/mpt/index.html
+++ b/notes/mpt/index.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Теория портфеля Гарри Марковица, и почему это лишь математическая иллюстрация. Принципы построения портфеля гораздо проще." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-04-21" />
-        <meta property="og:article:modified_time" content="2020-07-15" />
+        <meta property="og:article:modified_time" content="2020-09-17" />
 <meta property="og:title" content="(Не)Математика диверсификации-3: современная теория портфеля" />
 <meta property="og:url" content="https://onfin.github.io/notes/mpt" />
 
@@ -54,7 +54,7 @@
         <h1>(Не)Математика диверсификации-3: современная теория портфеля</h1>
         <div class="meta">
                 <p class="description">Теория портфеля Гарри Марковица, и почему это лишь математическая иллюстрация. Принципы построения портфеля гораздо проще.</p>
-                <p> Обновлено: <time>2020-07-15</time> </p>
+                <p> Обновлено: <time>2020-09-17</time> </p>
 
         </div>
     </header>
@@ -298,7 +298,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/notes/diversification_math2"> &lt;&lt; Математика диверсификации-2: доходность и риск </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/volatility"> Волатильность как мера риска &gt;&gt; </a></div>
+<div class="prevupnext"><a class="prev" href="/notes/diversification_math2"> &lt;&lt; Математика диверсификации-2: доходность и риск </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/factors"> Инвестиционные факторы &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
