--- a/notes/volatility/index.html
+++ b/notes/volatility/index.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Заблуждения про волатильность и нюансы её расчёта" />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-06-30" />
-        <meta property="og:article:modified_time" content="2020-07-15" />
+        <meta property="og:article:modified_time" content="2020-09-17" />
 <meta property="og:title" content="Волатильность как мера риска" />
 <meta property="og:url" content="https://onfin.github.io/notes/volatility" />
 
@@ -54,7 +54,7 @@
         <h1>Волатильность как мера риска</h1>
         <div class="meta">
                 <p class="description">Заблуждения про волатильность и нюансы её расчёта</p>
-                <p> Обновлено: <time>2020-07-15</time> </p>
+                <p> Обновлено: <time>2020-09-17</time> </p>
 
         </div>
     </header>
@@ -115,7 +115,7 @@ c-4-3.333-8.333-7.667-13 -13l-13-13l77-155 77-156c66 199.333 139 419.667
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/notes/mpt"> &lt;&lt; (Не)Математика диверсификации-3: современная теория портфеля </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/inflation"> Инфляция &gt;&gt; </a></div>
+<div class="prevupnext"><a class="prev" href="/notes/factors"> &lt;&lt; Инвестиционные факторы </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/inflation"> Инфляция &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
