--- a/literacy/instruments/gold.html
+++ b/literacy/instruments/gold.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Виды, специфика, риски и доходность вложений в золото. Место золота в инвестиционном портфеле. Альтернативы золоту." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-01-04" />
-        <meta property="og:article:modified_time" content="2020-10-10" />
+        <meta property="og:article:modified_time" content="2020-11-05" />
 <meta property="og:title" content="Золото" />
 <meta property="og:url" content="https://onfin.github.io/literacy/instruments/gold" />
 
@@ -54,7 +54,7 @@
         <h1>Золото</h1>
         <div class="meta">
                 <p class="description">Виды, специфика, риски и доходность вложений в золото. Место золота в инвестиционном портфеле. Альтернативы золоту.</p>
-                <p> Обновлено: <time>2020-10-10</time> </p>
+                <p> Обновлено: <time>2020-11-05</time> </p>
 
         </div>
     </header>
@@ -76,15 +76,16 @@
 <h2 id="_1">Производство, потребление и историческая динамика</h2>
 <p>Начнём с самых главных <a href="https://www.gold.org/goldhub/data/demand-and-supply">фактов про золото</a>:</p>
 <ul>
-<li>потребление — 330 тонн/год и снижается,</li>
+<li>потребление — 330 тонн/год и снижается (причём 2/3 обеспечивается вторичной переработкой),</li>
 <li>добыча — 3300 тонн/год (да, в 10 раз больше потребления) и растёт,</li>
-<li>запасы в хранилищах — 180.000 тонн (да, почти на шестьсот лет вперёд без учёта падения спроса и роста добычи).</li>
+<li>запасы в хранилищах — 180.000 тонн (да, почти на шестьсот лет вперёд без учёта падения спроса и роста добычи, и на две тысячи лет вперёд, если учесть вторичную переработку).</li>
 </ul>
 <p>Однако, часто вы можете увидеть совсем другие цифры спроса и предложения, которые говорят об их сбалансированности или даже «страшном дефиците» золота на рынке, из-за которого оно должно стоить «как никогда в истории». Связано это с тем, что (а) существует огромный рынок вторичной переработки золота, (б) существует огромный «спекулятивный» рынок золота, где его покупают и продают инвестиционные фонды, банки и центробанки. Поэтому в спрос на золото относят и спрос со вторичной переработки, и «инвестиционный» спрос, а в предложение очень часто забывают включить или одно, или другое, или сразу оба, получая «по желанию» или сбалансированность, или дефицит.</p>
 <p><a href="https://www.measuringworth.com/datasets/gold/">Стоимость золота</a>, с поправкой на инфляцию и в сравнении со <a href="https://www.quandl.com/data/BP/CRUDE_OIL_PRICES-Crude-Oil-Prices-from-1861">стоимостью нефти</a>, ведёт себя так:</p>
 <p><img src=/literacy/instruments/gold.svg style="width: 100%; height: 50wv" /></p>
 <p>Здесь за единицу взята средняя цена за весь период наблюдений. Видно как после повсеместной отмены золотого стандарта стоимость золота очень точно повторяет движение стоимости нефти. Я не изучал природу этой корреляции и, возможно, она случайна, но всё равно настораживает (cтоит заметить, что цена на золото-нефть не скоррелирована с <a href="https://www.investing.com/indices/sp-gsci-commodity-total-return-historical-data">ценой корзины биржевых товаров</a>).</p>
 <p>Золото не приносит дохода, только издержки на хранение. Однако, из-за своей некореллированости с рынками акций и облигаций, считается хорошим инструментом для <a href="/notes/diversification_math2">диверсификации портфеля</a>. Но держать золото в портфеле очень тяжело психологически. Из-за того, что (а) за кратким пиком цены на золото следует её затяжное, более десятилетия, падение; (б) налицо перепроизводство золота и падение его роли как инвестиционного актива.</p>
+<p>Я для себя решил, что снижение волатильности портфеля за счёт золота не оправдывает риска потерь от ребалансировки в непрерывно дешевеющий на протяжении десятилетий актив (обычная динамика для золота), который не восстановит свою стоимость уже никогда (потому что центробанки и инвесторы перестанут выкупать всю добычу по любым ценам, а реальному сектору оно не нужно).</p>
 <h2 id="_2">Способы приобретения золота</h2>
 <ol>
 <li>Банковские золотые слитки. Продаёт практически любой крупный банк, от 1 грамма (примерно 3Кр на январь 2020г). Проблемы: необходимо очень бережное отношение к слитку (отпечаток пальца или царапина <em>очень</em> сильно снижают цену) и сертификату на него (слиток без сертификата не может быть продан банку), при покупке нужно заплатить НДС (20% сверху цены продажи), цена продажи банку на 10–30% ниже цены покупки т.е. нужно ждать примерно полуторакратного удорожания (+ инфляция), чтобы просто вернуть свои вложения.</li>
