--- a/notes/index.html
+++ b/notes/index.html
@@ -17,7 +17,7 @@
     <meta property="og:description" content="Краткие заметки в систематическом порядке" />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-10-16" />
-        <meta property="og:article:modified_time" content="2021-07-26" />
+        <meta property="og:article:modified_time" content="2021-08-10" />
 <meta property="og:title" content="Заметки о финансах" />
 <meta property="og:url" content="https://onfin.github.io/notes" />
 
@@ -75,11 +75,11 @@
 </ol>
 <h2 id="_2">Инвестиционный портфель</h2>
 <ol>
+<li><a href="/notes/volatility2">Измеряя рыночный риск</a></li>
 <li><a href="/notes/diversification_math">Математика диверсификации: портфельный эффект и ребалансировка между акциями</a></li>
 <li><a href="/notes/diversification_math2">Математика диверсификации-2: доходность и риск</a></li>
 <li><a href="/notes/mpt">(Не)Математика диверсификации-3: современная теория портфеля</a></li>
 <li><a href="/notes/factors">Инвестиционные факторы</a></li>
-<li><a href="/notes/volatility">Волатильность как мера риска</a></li>
 <li><a href="/notes/bonds_in_portfolio">Облигации в инвестиционном портфеле</a></li>
 <li><a href="/notes/markettiming">Выбор времени для покупки акций</a></li>
 <li><a href="/notes/contributions">Проблема довложений</a></li>
