--- a/notes/volatility2/index.html
+++ b/notes/volatility2/index.html
@@ -17,7 +17,7 @@
     <meta property="og:description" content="Проанализировал целых 10 возможных мер рыночного риска, и собрал их в 3 основных его аспекта, которые должны учитываться при определении терпимости к риску и построении оптимального портфеля." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2021-08-10" />
-        <meta property="og:article:modified_time" content="2021-08-10" />
+        <meta property="og:article:modified_time" content="2021-08-12" />
 <meta property="og:title" content="Измеряя рыночный риск" />
 <meta property="og:url" content="https://onfin.github.io/notes/volatility2" />
 
@@ -62,7 +62,7 @@
         <h1>Измеряя рыночный риск</h1>
         <div class="meta">
                 <p class="description">Проанализировал целых 10 возможных мер рыночного риска, и собрал их в 3 основных его аспекта, которые должны учитываться при определении терпимости к риску и построении оптимального портфеля.</p>
-                <p> Обновлено: <time>2021-08-10</time> </p>
+                <p> Обновлено: <time>2021-08-12</time> </p>
 
         </div>
     </header>
@@ -256,7 +256,7 @@ c-4-3.333-8.333-7.667-13 -13l-13-13l77-155 77-156c66 199.333 139 419.667
     </main>
 
     <footer>
-
+<div class="prevupnext"><a class="prev" href="/notes/lifeprofile"> &lt;&lt; Финансовый профиль жизни обычного человека и инвестора </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/expo"> Экспозиция и риск/доходность &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
