--- a/notes/diversification_math/index.html
+++ b/notes/diversification_math/index.html
@@ -17,7 +17,7 @@
     <meta property="og:description" content="Рассмотрим на простой модели как из набора акций с нулевой ожидаемой доходностью получается портфель с положительной и как на его доходность влияют довложения и ребалансировки" />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-12-07" />
-        <meta property="og:article:modified_time" content="2021-08-12" />
+        <meta property="og:article:modified_time" content="2021-08-22" />
 <meta property="og:title" content="Математика диверсификации: портфельный эффект и ребалансировка между акциями" />
 <meta property="og:url" content="https://onfin.github.io/notes/diversification_math" />
 
@@ -62,7 +62,7 @@
         <h1>Математика диверсификации: портфельный эффект и ребалансировка между акциями</h1>
         <div class="meta">
                 <p class="description">Рассмотрим на простой модели как из набора акций с нулевой ожидаемой доходностью получается портфель с положительной и как на его доходность влияют довложения и ребалансировки</p>
-                <p> Обновлено: <time>2021-08-12</time> </p>
+                <p> Обновлено: <time>2021-08-22</time> </p>
 
         </div>
     </header>
@@ -112,7 +112,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/notes/expo"> &lt;&lt; Экспозиция и риск/доходность </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/diversification_math2"> Математика диверсификации-2: доходность и риск &gt;&gt; </a></div>
+<div class="prevupnext"><a class="prev" href="/notes/grimace"> &lt;&lt; Портфельный эффект и гримасы корреляции </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/diversification_math2"> Математика диверсификации-2: доходность и риск &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
