--- a/notes/expo/index.html
+++ b/notes/expo/index.html
@@ -11,13 +11,13 @@
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
     <link rel="icon" type="image/png" href="/images/favicon.png"/>
         <meta name="description" content="Небольшая зарисовка о неочевидных особенностях масштабирования портфелей" />
-        <meta name="keywords" content="Экспозиция, риск, доходность, портфельная теория, волатильность, risk parity" />
+        <meta name="keywords" content="экспозиция, риск, доходность, портфельная теория, волатильность, risk parity" />
 
 <meta property="og:locale" content="ru" />
     <meta property="og:description" content="Небольшая зарисовка о неочевидных особенностях масштабирования портфелей" />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2021-08-12" />
-        <meta property="og:article:modified_time" content="2021-08-12" />
+        <meta property="og:article:modified_time" content="2021-08-22" />
 <meta property="og:title" content="Экспозиция и риск/доходность" />
 <meta property="og:url" content="https://onfin.github.io/notes/expo" />
 
@@ -62,7 +62,7 @@
         <h1>Экспозиция и риск/доходность</h1>
         <div class="meta">
                 <p class="description">Небольшая зарисовка о неочевидных особенностях масштабирования портфелей</p>
-                <p> Обновлено: <time>2021-08-12</time> </p>
+                <p> Обновлено: <time>2021-08-22</time> </p>
 
         </div>
     </header>
@@ -97,6 +97,8 @@
         
         <a class="donate-button" href="/donate">Отблагодарить</a>
 
+          <a class="donate-button" href='https://t.me/on_fin/119' target="_blank">Комментарии <img src='/images/tg.svg' style='height: 0.7em; margin-left: -0.5ex; vertical-align: text-top'></a>
+
     </div>
     </aside>
 </article>
@@ -104,7 +106,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/notes/volatility2"> &lt;&lt; Измеряя рыночный риск </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/diversification_math"> Математика диверсификации: портфельный эффект и ребалансировка между акциями &gt;&gt; </a></div>
+<div class="prevupnext"><a class="prev" href="/notes/volatility2"> &lt;&lt; Измеряя рыночный риск </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/grimace"> Портфельный эффект и гримасы корреляции &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
